#45 Start Rework all architecture, add config to Milvus.
